--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.9.3",
     "stripe": "^20.3.1",
     "uuid": "^13.0.0"
   },
